# teqp

./: .gitignore  .gitmodules  .readthedocs.yaml  .readthedocs.yml  CMakeLists.txt  CMakeSettings.json  Doxyfile  LICENSE.md  MANIFEST.in  NISTtheDocs.yml  README.md  buildwheels.py  mycp  pyproject.toml  setup.py  setup.py_
.github/: dependabot.yml
.github/disabled_workflows/: NISTtheDocs.yml  build_clangcl.yml  cppcheck.yml  pypi.yml
.github/workflows/: NISTtheDocs.yml  NISTtheDocs2Death.yml  build_cibuildwheel.yml  build_clangcl.yml  build_docs.yaml  dev_codeql.yml  main.yml  pypi.yml  pyproject.toml  runasan.yml  runcatch.yml  submit_coverity.yml
binder/: apt.txt  environment.yml  postBuild
dev/: SchemaBuilder.ipynb  compare_GERG200x_BIP.py  model_schemas.tar.xz
dev/boost_bcp_docker/: Dockerfile  README.md
dev/docker/archdev/: Dockerfile  docker-compose.yml
dev/docker/boost_bcp_docker/: Dockerfile  boost_teqp.tar.xz
dev/docker/clangdev/: Dockerfile  docker-compose.yml
dev/docker/gcov/: Dockerfile
dev/docker/valgrind/: Dockerfile  docker-compose.yml  run_valgrind.py
dev/templates/: model_schema.cpp.in
doc/: _reqs.txt  environment.yml  index.rst  macros.tex  requirements.txt
doc/source/: conf.py  index.rst  sphinx_pre_run.py
doc/source/algorithms/: GeneralizedPhaseEquilibria.ipynb  Tracing for GGE.ipynb  TracingforGGE.ipynb  VLE.ipynb  VLLE-p.ipynb  VLLE.ipynb  critical_curves.ipynb  index.rst
doc/source/cpp/: index.rst
doc/source/derivs/: compderivs.ipynb  derivs.ipynb  ideal_gas.ipynb  index.rst
doc/source/examples/: IECR examples.ipynb  IECR_examples.ipynb  index.rst
doc/source/fitting/: MultifluidBIPFitting.ipynb  VLE_data_propane_dodecane.csv  index.rst
doc/source/getting_started/: index.rst
doc/source/models/: AdvancedCubicMixing.ipynb  Association.ipynb  CPA.ipynb  Check_Dufal_water.ipynb  ECS.ipynb  GERG.ipynb  HMX.BNC  IdealGas.ipynb  LKP.ipynb  MultifluidPlusAC.ipynb  MultifluidPlusAssociation.ipynb  NEWR1234YF.FLD  PCSAFT.ipynb  QuantumPR.ipynb  R152A.FLD  REFPROP_conversion.ipynb  RK-PR.ipynb  SAFT-VR-Mie-Dipolar-Polarizable.ipynb  SAFT-VR-Mie-Polar.ipynb  SAFT-VR-Mie.ipynb  cubics.ipynb  fit_params_Propane_SAFTVRMie.ipynb  fitted_Twu_coeffs.csv  index.rst  make_model.ipynb  model_potentials.ipynb  multifluid.ipynb  multifluid_mutant.ipynb
doc/source/recipes/: FitPureParameters.ipynb  HeatPumpModel.ipynb  IdealCurves.ipynb  index.rst
include/teqp/: constants.hpp  containers.hpp  core.hpp  critical_tracing.hpp  derivs.hpp  eos.hpp  exceptions.hpp  filesystem.hpp  finite_derivs.hpp  ideal_eosterms.hpp  json_builder.hpp  json_tools.hpp  types.hpp
include/teqp/algorithms/: VLE.hpp  VLE_pure.hpp  VLE_types.hpp  VLLE.hpp  VLLE_types.hpp  ancillary_builder.hpp  critical_pure.hpp  critical_tracing.hpp  critical_tracing_types.hpp  iteration.hpp  (+3 more)
interface/: CPA.cpp  PCSAFT.cpp  cubics.cpp  model_potentials.cpp  multifluid.cpp  multifluid_mutant.cpp  multifluid_shared.hpp  pybind11_wrapper.cpp  pybind11_wrapper.hpp  teqpversion.hpp  vdW.cpp
interface/C/: demo.cpp  teqpc.cpp  teqpc.h  teqpc_bench.cpp  test_teqpc.py  test_teqpc_FFI.py  test_teqpc_LJ.py
interface/CPP/: AbstractModel_implementation.cpp  bench_teqpcpp.cpp  model_factories.cpp  model_factory_CPA.cpp  model_factory_GERG.cpp  model_factory_IdealHelmholtz.cpp  model_factory_LKP.cpp  model_factory_SAFTVRMie.cpp  model_factory_advancedmixcubic.cpp  model_factory_genericsaft.cpp  model_factory_model_potentials.cpp  model_factory_multifluid.cpp  model_factory_multifluid_activity.cpp  model_factory_multifluid_association.cpp  model_factory_pcsaft.cpp  model_factory_softsaft.cpp  teqp_impl_Arxy.cpp  teqp_impl_VLE.cpp  teqp_impl_VLLE.cpp  teqp_impl_crit.cpp  teqp_impl_factory.cpp  teqp_impl_isochoric.cpp  teqp_impl_virials.cpp  teqpcpp.cpp  teqpcpp.hpp  test_teqpcpp.cpp
interface/js/: README.md  build.sh  docker-compose.yml  emscripten_interface.cxx  test_teqp.html
notebooks/: Bench schema validation.ipynb  BenchJSONFittter.ipynb  Check SAFT-VR-Mie Implementations.ipynb  CheckCubics.ipynb  Generic_p_derivs.ipynb  InteractiveBIPFitting.ipynb  MieMonomer.py  MultiFluidTutorial.ipynb  NH3H2Odata.csv  Nitrogen+Ethane critical loci.ipynb  PCSAFT alphar_r Taylor series derivatives.ipynb  PDSIMintegrators.py  Reducing term fix when x_i, x_j = 0,0.ipynb  Schema Builder.ipynb  SecondVirials.ipynb  Virial Coefficient Temp Derivs.ipynb  check_REFPROP_conversion.py  fugderivs.tex  isochoric.py  schemas.json  test_Aig.py  test_crit_scaling.py  test_pure_multfluid.py  test_pure_multifluid.py  time_Ar0n.py  time_teqp.py  trace_critical.py  vdW crit.ipynb
src/: REFPROP_lib.h  asan_known_fail.cpp  bench.cpp  bench_AbstractModel.cpp  bench_derivbox.cpp  boost_pool_test.cpp  hardcoded_mockup.cpp  main.cpp  multifluid.cpp  multifluid_crit.cpp  sat_Z_accuracy.cpp  teqp_profile.cpp  test_LennardJones.cpp  test_autodiff.cpp  test_boost_odeint.cpp  test_mpderivs.cpp  test_multifluid_ancillaries.cpp  test_runtime_model_inclusion.cpp  test_variant.cpp  time_Ar0n.cpp  time_REFPROP.cpp  time_fugcoeff.cpp  time_fugcoeff_Catch.cpp  trace_critical.cpp
src/data/: Dufal_assoc.cpp  FEANN.cpp  PCSAFT.cpp
src/tests/: GERG2008.cpp  GERG2008.h  catch_fixtures.hpp  catch_test_2centerLJF.cxx  catch_test_EXP6.cxx  catch_test_FEANN.cxx  catch_test_GERG.cxx  catch_test_GERG2004.cpp  catch_test_Grayiteration.cxx  catch_test_LJmodels.cxx  catch_test_LKP.cxx  catch_test_PCSAFT.cxx  catch_test_SAFTVRMie.cxx  catch_test_SAFTgeneric.cxx  catch_test_SAFTpolar.cxx  catch_test_SW.cxx  catch_test_VLLE.cxx  catch_test_alphaig.cxx  catch_test_ammonia_water.cxx  catch_test_ancillary.cxx  catch_test_association.cxx  catch_test_compderivs.cxx  catch_test_concepts.cxx  catch_test_cubics.cxx  catch_test_jsonschema.cxx  catch_test_modelset.cxx  catch_test_multfluid_ecs_mutant.cxx  catch_test_multifluid.cxx  catch_test_multifluid_RPinterop.cxx  catch_test_mutant.cxx  catch_test_paramoptim.cxx  catch_test_phase_equil.cxx  catch_test_sha256.cxx  catch_test_vdWEOS1.cxx  catch_tests.cxx  test_common.in
teqp/: __init__.py
(+63 files in other folders)
