[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-all = "apk add clang"
environment = { CXX="clang++" }

[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.setuptools.dynamic]
version = {attr = "teqp.__version__"}

[project]
name = "teqp"
version = "0.19.1"

