[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-all = "apk add clang"
environment = { CXX="clang++" }

[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "teqp"
dynamic = ["version"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = '''interface/teqpversion.hpp'''
regex = '''(VERSION) *= *([""])v?(?P<value>.+?)\2'''

[tool.scikit-build]
cmake.verbose = true
logging.level = "INFO"